--- a/amazon_data_extraction.ipynb
+++ b/amazon_data_extraction.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Amazon Co-purchase Network\n",
+    "This notebook contains the code for extracting and cleaning the amazon data.\n",
+    "##### Note: The location of data files given here local to our machine. We have submitted files separately. In order to execute this notebook you need to copy those files and provide their location in the required places."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
@@ -19,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Extraction"
+    "## Data Extraction\n",
+    "First of all the selected attributes are extraced from the metadata. Then the edgelist is created using a conversion function.\n",
+    "Here it is shown for March data but has to be repeated for rest months."
    ]
   },
   {
@@ -30,11 +41,11 @@
    },
    "outputs": [],
    "source": [
-    "# This function creates the list of nodes for the graph\n",
+    "# This function extracts the list of atributes for each product\n",
+    "# from the meta-data which we will be using for our analysis\n",
     "def extract_product_attributes_nodes(in_file,out_file):\n",
     "    #Read all lines of the meta data into content list.\n",
-    "    # fname = \"C:/Sushmita/MS DataScience/NetworkScience/Project/Data/amazon-meta/amazon-meta.txt\"\n",
-    "    fname = in_file\n",
+    "    fname = in_file #input metadata .txt file\n",
     "    with open(fname, encoding = 'utf8') as f:\n",
     "        content = f.readlines()\n",
     "    #Remove the beginning and trailing white spaces.\n",
@@ -46,8 +57,8 @@
     "    # and write the content into file only when all information are available. Hence,\n",
     "    # if review information for a product is not available, the product won't appear\n",
     "    # in the final file.\n",
-    "    #file = open(\"C:/Sushmita/MS DataScience/NetworkScience/Project/Data/testfile.txt\",\"w\", encoding='utf8')\n",
-    "    file = open(out_file,\"w\", encoding='utf8')\n",
+    "   \n",
+    "    file = open(out_file,\"w\", encoding='utf8') # output file with exracted attributes\n",
     "    previouslines = ['Id', 'title', 'group', 'categories', 'totalreviews', 'avgrating']\n",
     "    for line in content:\n",
     "        lines = line.split(':')\n",
@@ -78,14 +89,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Function converts the text file to .CSV file for creation of list of nodes and edges for the graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# This function the text file to .CSV file for creation of list of nodes and edges for the graph\n",
+    "# This function converts the text file to .CSV file for creation of list of nodes and edges for the graph\n",
     "def convert_txt_csv(i_file,o_file,final_csv):\n",
     "    with open(i_file, 'r', encoding='utf8', newline='') as in_file:\n",
     "        stripped = (line.strip() for line in in_file)\n",
@@ -126,7 +144,7 @@
    },
    "outputs": [],
    "source": [
-    "# Form the edgelist\n",
+    "# Forms the edgelist for March\n",
     "convert_txt_csv('C:/Sushmita/MS DataScience/NetworkScience/Project/Results/graph/Amazon_March/edgelist.txt',\n",
     "                'C:/Sushmita/MS DataScience/NetworkScience/Project/Results/graph/Amazon_March/edgelist.tsv',\n",
     "                'C:/Sushmita/MS DataScience/NetworkScience/Project/Results/graph/Amazon_March/edgelist.csv')"
@@ -136,7 +154,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating Graph"
+    "## Creating Graph\n",
+    "Using the nodelist and edgelist from above cells graph has to be created for each month. Again here we have done for only March."
    ]
   },
   {
@@ -195,7 +214,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Cleaning"
+    "## Data Cleaning\n",
+    "For better visualization isolates have been removed and large connected component has been extracted. Below shows for March and has to be repreated for other months."
    ]
   },
   {
