--- a/amazon_data_extraction.ipynb
+++ b/amazon_data_extraction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Amazon Co-purchase Network\n",
     "This notebook contains the code for extracting and cleaning the amazon data.\n",
-    "##### Note: The location of data files given here local to our machine. We have submitted files separately. In order to execute this notebook you need to copy those files and provide their location in the required places."
+    "##### Note: The location of data files given here local to our machine. We have submitted files separately in Canvas due to huge size. In order to execute this notebook you need to copy those files and provide their location in the required places."
    ]
   },
   {
